@@ -1,3 +1,7 @@
+2010-06-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* picasa.py (PicasaPhotoList._set_photo_cb): Fixed KeyErrors.
+
 2010-06-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* NEWS: 1.0-b3 release.
